--- a/app/components/addStringComponent/addString.html
+++ b/app/components/addStringComponent/addString.html
@@ -1,4 +1,4 @@
 <div class="center">
-<input  ng-model="$ctrl.text" minlength="3" maxlength="15"/>
-<button ng-click="$ctrl.addStr()" translate="ADD"></button>
+    Your String: <input maxlength="15" minlength="3" ng-model="$ctrl.userString"/>
+    <button ng-click="$ctrl.addString()">Add</button>
 </div>
