--- a/app/components/addStringComponent/addString.html
+++ b/app/components/addStringComponent/addString.html
@@ -1,5 +1,5 @@
 <div class="center">
     <input maxlength="15" minlength="3" ng-model="$ctrl.userString"/>
-    <button ng-click="$ctrl.onAdd()" ng-if="$ctrl.checkIfValid()" translate="add"></button>
+    <button ng-click="$ctrl.onAdd()" ng-disabled="!$ctrl.checkIfValid()" translate="add"></button>
     <div ng-show="!$ctrl.checkIfValid()"><p>{{'notification' | translate }}</p></div>
 </div>
