--- a/app/components/mainComponent/main.html
+++ b/app/components/mainComponent/main.html
@@ -1,4 +1,4 @@
 <div class="center">
-    <adder add="$ctrl.add(myString)"></adder>
-    <list delete="$ctrl.delete(index)" reset="$ctrl.reset(index)" strings="$ctrl.strings"></list>
+    <adder on-add="$ctrl.onAdd(myString)"></adder>
+    <list on-delete="$ctrl.onDelete(index)" on-reset="$ctrl.onReset(index)" strings="$ctrl.strings"></list>
 </div>
