--- a/app/styles/style.css
+++ b/app/styles/style.css
@@ -1,4 +1,5 @@
 ul {
+    top: 0;
     list-style-type: none;
     margin: 0;
     padding: 0;
@@ -51,8 +52,8 @@ li.dropdown {
     display: block;
 }
 .center{
-    margin-top: 30px;
-    margin-bottom: 30px;
+    margin-top: 20px;
+    margin-bottom: 20px;
     text-align: center;
     position: center;
 }
