--- a/app/components/listStringsComponent/listString.html
+++ b/app/components/listStringsComponent/listString.html
@@ -1,5 +1,6 @@
+<div class="center" ng-if="!$ctrl.strings.length">Нет елементов</div>
 <table class="center">
-    <tr ng-repeat="str in $ctrl.strings track by $index">
+    <tr ng-if="$ctrl.strings.length" ng-repeat="str in $ctrl.strings track by $index">
         <td>
             <div ng-class="str.color" title="{{ str.color | translate }}"></div>
         </td>
