--- a/app/styles/style.css
+++ b/app/styles/style.css
@@ -57,6 +57,10 @@ li.dropdown {
     text-align: center;
     position: center;
 }
+
+.adder {
+    text-align: center;
+}
 list{
     display: block;
     position: center;
