--- a/app/components/listStringsComponent/listString.html
+++ b/app/components/listStringsComponent/listString.html
@@ -1,6 +1,6 @@
 <div class="center" ng-if="!$ctrl.strings.length">{{ 'noEl' | translate}}</div>
-<table class="center">
-    <tr ng-if="$ctrl.strings.length" ng-repeat="str in $ctrl.strings track by $index">
+<table ng-if="$ctrl.strings.length" class="center">
+    <tr ng-repeat="str in $ctrl.strings track by $index">
         <td>
             <div ng-class="str.color" title="{{ str.color | translate }}"></div>
         </td>
