done - тесты на компоненты

--- a/app/components/listStringsComponent/listString.html
+++ b/app/components/listStringsComponent/listString.html
@@ -1,6 +1,7 @@
+<string-filter color="$ctrl.searchColor" colors="$ctrl.colors" text="$ctrl.searchText"></string-filter>
 <div class="center" ng-if="!$ctrl.strings.length">{{ 'noEl' | translate}}</div>
 <table ng-if="$ctrl.strings.length" class="center">
-    <tr ng-repeat="str in $ctrl.strings track by $index">
+    <tr ng-repeat="str in $ctrl.strings | filter: {color : $ctrl.searchColor}| filter: {text : $ctrl.searchText} track by $index">
         <td>
             <div ng-class="str.color" title="{{ str.color | translate }}"></div>
         </td>
