--- a/app/components/mainComponent/main.html
+++ b/app/components/mainComponent/main.html
@@ -1,4 +1,5 @@
 <div class="center">
     <adder on-add="$ctrl.onAdd(myString)"></adder>
-    <list on-delete="$ctrl.onDelete(index)" on-reset="$ctrl.onReset(index)" strings="$ctrl.strings"></list>
+    <list colors="$ctrl.colors" on-delete="$ctrl.onDelete(index)" on-reset="$ctrl.onReset(index)"
+          strings="$ctrl.strings"></list>
 </div>
