--- a/app/styles/style.css
+++ b/app/styles/style.css
@@ -113,3 +113,73 @@ input {
     width: 400px;
     position: center;
 }
+
+.set {
+    margin-left: auto;
+    margin-right: auto;
+    margin-top: 300px;
+    width: 400px;
+    height: 400px;
+    background-color: white;
+    border-radius: 40px;
+}
+
+.back {
+    height: 100%;
+    width: 100%;
+    position: absolute;
+    overflow: hidden;
+    background-color: black;
+    opacity: 0.7;
+}
+
+.labelname {
+    font-weight: bold;
+    position: absolute;
+    width: 300px;
+    text-align: center;
+    font-size: 18px;
+    margin-top: 30px;
+}
+
+.okbutton {
+    margin-top: 4px;
+    font-size: 18px;
+}
+
+.inputname {
+    font-size: 20px;
+    text-align: center;
+    width: 350px;
+    margin-left: 20px;
+    margin-top: 100px;
+}
+
+.setting {
+    margin-left: 25px;
+    margin-right: auto;
+    margin-top: 0px;
+    height: 50px;
+    width: 50px;
+    display: inline-block;
+    background-image: url("res/settings.png");
+}
+
+.lang {
+    font-weight: bold;
+    position: relative;
+    text-align: center;
+    display: inline-block;
+    font-size: 18px;
+    margin-top: 100px;
+    margin-left: 75px;
+}
+
+.close {
+    margin-left: 90%;
+    margin-top: 10%;
+    height: 26px;
+    width: 26px;
+    background-image: url("res/close.png");
+
+}
