--- a/app/styles/style.css
+++ b/app/styles/style.css
@@ -11,46 +11,6 @@ ul {
 li {
     float: left;
 }
-
-li a, .dropbtn {
-    display: inline-block;
-    color: white;
-    text-align: center;
-    padding: 14px 16px;
-    text-decoration: none;
-}
-
-li a:hover, .dropdown:hover .dropbtn {
-    background-color: red;
-}
-
-li.dropdown {
-    display: inline-block;
-    text-align: center;
-}
-
-.dropdown-content {
-    display: none;
-    position: absolute;
-    background-color: #f9f9f9;
-    min-width: 80px;
-    box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
-    padding: 8px 10px;
-    z-index: 1;
-}
-.dropdown-content a {
-    color: black;
-    padding: 8px 10px;
-    text-decoration: none;
-    display: block;
-    text-align: left;
-}
-
-.dropdown-content a:hover {background-color: #f1f1f1}
-
-.dropdown:hover .dropdown-content {
-    display: block;
-}
 .center{
     margin-top: 10px;
     margin-bottom: 10px;
@@ -117,32 +77,26 @@ input {
 .set {
     margin-left: auto;
     margin-right: auto;
-    margin-top: 300px;
     width: 400px;
     height: 400px;
     background-color: white;
+    border: 3px solid;
 }
 
 .back {
-    height: 100%;
-    width: 100%;
+    margin-top: 7%;
+    height: 95%;
+    width: 95%;
     position: absolute;
-    overflow: hidden;
-    background-color: black;
-    opacity: 0.7;
 }
 
 .labelname {
     font-weight: bold;
-    position: absolute;
+    position: relative;
     width: 300px;
-    text-align: center;
-    font-size: 18px;
-    margin-top: 30px;
-}
-
-.okbutton {
-    margin-top: 4px;
+    margin-left: 15px;
+    margin-top: 3%;
+    margin-bottom: 3%;
     font-size: 18px;
 }
 
@@ -151,7 +105,7 @@ input {
     text-align: center;
     width: 350px;
     margin-left: 20px;
-    margin-top: 100px;
+    margin-top: 2%;
 }
 
 .setting {
@@ -170,15 +124,28 @@ input {
     text-align: center;
     display: inline-block;
     font-size: 18px;
-    margin-top: 100px;
-    margin-left: 75px;
+    margin-left: 200px;
 }
 
 .close {
-    margin-left: 90%;
-    margin-top: 10%;
+    margin-left: 92%;
+    margin-top: 3%;
     height: 26px;
     width: 26px;
     background-image: url("res/close.png");
 
+}
+
+.submit {
+    margin-top: 20%;
+    margin-left: 5%;
+    position: center;
+    margin-right: 15%;
+}
+
+.cancel {
+    margin-top: 20%;
+    margin-left: 5%;
+    position: center;
+    margin-right: 15%;
 }
