--- a/app/components/settingComponent/settingComponent.html
+++ b/app/components/settingComponent/settingComponent.html
@@ -1,12 +1,16 @@
 <span class="back">
     <div class="set">
         <div class="close" ng-click="$ctrl.hide()"></div>
-        <div class="labelname">{{'entername' | translate}}:</div>
+        <label class="labelname">{{'entername' | translate}}:</label>
         <input class="inputname" ng-model="$ctrl.input" type="text">
-        <div class="labelname">{{'chooselang' | translate}}</div>
-        <select class="lang" ng-model="$ctrl.currentLanguage"
-                ng-options="lang.title for lang in $ctrl.languages track by lang.name"></select>
-        <div class="buttons">
+        <div class="langSelect">
+            <label class="labelname" for="lang">{{'chooselang' | translate}}
+                <select class="lang" id="lang" ng-model="$ctrl.currentLanguage"
+                        ng-options="lang.title for lang in $ctrl.languages track by lang.name">
+                </select>
+            </label>
+        </div>
+        <div>
             <button class="submit" ng-click="$ctrl.submit()">Подтвердить</button>
             <button class="cancel" ng-click="$ctrl.reset()">Отменить</button>
         </div>
