--- a/app/styles/style.css
+++ b/app/styles/style.css
@@ -12,8 +12,7 @@ li {
     float: left;
 }
 .center{
-    margin-top: 10px;
-    margin-bottom: 10px;
+    margin-top: 7px;
     text-align: center;
     position: center;
 }
@@ -78,7 +77,7 @@ input {
     margin-left: auto;
     margin-right: auto;
     width: 400px;
-    height: 400px;
+    height: 200px;
     background-color: white;
     border: 3px solid;
 }
@@ -120,11 +119,8 @@ input {
 
 .lang {
     font-weight: bold;
-    position: relative;
     text-align: center;
-    display: inline-block;
     font-size: 18px;
-    margin-left: 200px;
 }
 
 .close {
@@ -137,15 +133,19 @@ input {
 }
 
 .submit {
-    margin-top: 20%;
+    margin-top: 13%;
     margin-left: 5%;
     position: center;
     margin-right: 15%;
 }
 
 .cancel {
-    margin-top: 20%;
+    margin-top: 13%;
     margin-left: 5%;
     position: center;
     margin-right: 15%;
+}
+
+body {
+
 }
