--- a/app/components/stringFilterComponent/filter.html
+++ b/app/components/stringFilterComponent/filter.html
@@ -1,6 +1,6 @@
 <div class="center">
     <input ng-model="$ctrl.string" type="text">
-    <select ng-change="$ctrl.filterArray()" ng-model="$ctrl.currentColor"
+    <select ng-model="$ctrl.currentColor"
             ng-options="color.label | translate for color in $ctrl.colors"></select>
     <button ng-click="$ctrl.filterArray()">Submit</button>
 </div>
