--- a/app/components/mainComponent/main.html
+++ b/app/components/mainComponent/main.html
@@ -1,6 +1,6 @@
 <div class="center">
     <adder on-add="$ctrl.onAdd(myString)"></adder>
-    <string-filter color="$ctrl.color" colors="$ctrl.colors" text="$ctrl.text"></string-filter>
-    <list colors="$ctrl.colors" on-delete="$ctrl.onDelete(index)" on-reset="$ctrl.onReset(index)"
-          color="$ctrl.color" strings="$ctrl.strings" text="$ctrl.text"></list>
+    <string-filter colors="$ctrl.colors" on-filter="$ctrl.getFilterObj(text,color)"></string-filter>
+    <list filter-obj="$ctrl.filterObject" on-delete="$ctrl.onDelete(index)"
+          on-reset="$ctrl.onReset(index)" strings="$ctrl.strings"></list>
 </div>
