--- a/app/components/navbarComponent/navbar.html
+++ b/app/components/navbarComponent/navbar.html
@@ -1,6 +1,7 @@
-<setting-component display="$ctrl.settingDisplay" languages="$ctrl.languages" ng-if="$ctrl.settingDisplay"
+<setting-component current-language="$ctrl.currentLanguage" languages="$ctrl.languages"
                    welcome="$ctrl.welcome"
-                   on-language-change="$ctrl.onLanguageChange(lang)"></setting-component>
+                   ng-if="$ctrl.settingDisplay" on-change="$ctrl.onChange(lang,welcome)"
+                   on-close="$ctrl.close()"></setting-component>
 <ul>
     <li>
         <button class="setting" ng-click="$ctrl.display()"></button>
